--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-	ext.kotlin_version = '1.3.10'
+	ext.kotlin_version = '1.4.21'
 
 	repositories {
 		mavenCentral()
@@ -24,8 +24,8 @@ subprojects {
 
 	tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 		kotlinOptions {
-			apiVersion = "1.3"
-			languageVersion = "1.3"
+			apiVersion = "1.4"
+			languageVersion = "1.4"
 			//default suppressWarnings = false
 			//default verbose = false
 			jvmTarget = "1.8"
@@ -34,7 +34,8 @@ subprojects {
 		}
 	}
 
-	version = '20190311'
+	version = 'NEXT-SNAPSHOT'
+//	version = '20190311'
 	group = "com.github.skiedrowski.tools.jee"
 
 	repositories {
